# weather_app

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  weather.cpp  weather.h
